--- a/package.json
+++ b/package.json
@@ -27,8 +27,7 @@
   },
   "dependencies": {
     "@rollup/pluginutils": "^5.0.2",
-    "node-fetch": "^3.3.0",
-    "source-map": "^0.7.4"
+    "node-fetch": "^3.3.0"
   },
   "devDependencies": {
     "ava": "^5.1.1",
