--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "dependencies": {
     "@rollup/pluginutils": "^5.0.2",
+    "magic-string": "^0.27.0",
     "node-fetch": "^3.3.0"
   },
   "devDependencies": {
